k8s/comment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
        - name: comment-service
          image: razvanmocica/comment-service:latest
          ports:
            - containerPort: 8083
          #              hostPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: comment-service
