k8s/eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: razvanmocica/eureka:latest
          ports:
            - containerPort: 8761
          #              hostPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: eureka
