k8s/exercise-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-service
  template:
    metadata:
      labels:
        app: exercise-service
    spec:
      containers:
        - name: exercise-service
          image: razvanmocica/exercise-service:latest
          ports:
            - containerPort: 8084
          #              hostPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: exercise-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: exercise-service
