k8s/gateway-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: razvanmocica/gateway-service:latest
          ports:
            - containerPort: 8080
          #              hostPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: gateway-service
