k8s/invoices-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoices-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoices-service
  template:
    metadata:
      labels:
        app: invoices-service
    spec:
      containers:
        - name: invoices-service
          image: razvanmocica/invoices-service:latest
          ports:
            - containerPort: 8087
          #              hostPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: invoices-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: invoices-service
