k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: razvanmocica/order-service:latest
          ports:
            - containerPort: 8086
          #              hostPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: order-service
