k8s/post-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: razvanmocica/post-service:latest
          ports:
            - containerPort: 8082
          #              hostPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: post-service
