k8s/training-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: training-service
  template:
    metadata:
      labels:
        app: training-service
    spec:
      containers:
        - name: training-service
          image: razvanmocica/training-service:latest
          ports:
            - containerPort: 8085
          #              hostPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: training-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: training-service
