k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: razvanmocica/user-service:latest
          ports:
            - containerPort: 8081
          #              hostPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: user-service
