k8s/websocket-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-service
  template:
    metadata:
      labels:
        app: websocket-service
    spec:
      containers:
        - name: websocket-service
          image: razvanmocica/websocket-service:latest
          ports:
            - containerPort: 8089
          #              hostPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  #  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8089
      targetPort: 8089
  selector:
    app: websocket-service
